--- a/chapter.tex
+++ b/chapter.tex
@@ -6,7 +6,7 @@
 % \newcommand{\name}{null}
 
 \newcommand{\listingname}{listing.cpp}
-\newcommand{\imagename}{image.jpg}
+\newcommand{\imagename}{image}
 
 \newcommand{\illustration}[2]{
 \graphicspath{{#1}}
