--- a/wokwi_book.tex
+++ b/wokwi_book.tex
@@ -60,27 +60,27 @@
 
 \include{intro/intro.tex}
 
-\section{План}
+% \section{План}
 
-\begin{enumerate}
-    \item Мигание светодиодом. \texttt{delay()}, \texttt{digitalWrite()}
-    \item Маячок с нарастающей яркостью. \texttt{ШИМ}, \texttt{analogWrite()}, Идентификаторы
-    \item Регулируемая лампочка. \texttt{analogRead()}, \texttt{int}, Переменные
-    \item Автоматический ночник. \texttt{bool}, \texttt{if()}
-    \item Пульс. \texttt{mod}
-    \item Бегущий огонь. \texttt{for()}
-    \item Вентилятор. Силовая нагрузка. Мотор
-    \item Световой телеграф. подключение кнопок, \texttt{digitalRead()}
-    \item Лампочка с кнопкой. Защита от дребезга
-    \item Регулируемая лампочка. Функции
-    \item Кнопочные ковбои. Массивы
-    \item Секундомер. Семисегментный индикатор, \texttt{bitRead()}
-    \item Счетчик нажатий. Сдвиговый регистр, \texttt{shiftOut()}
-    \item Комнатный термометр. Датчик температуры. Математические выражения
-    \item Метеостанция. \texttt{Serial.print()}, \texttt{Serial.println()}
-    \item Пантограф. \texttt{Servo}
-    \item USB лампочка. \texttt{Serial.read()}
-\end{enumerate}
+% \begin{enumerate}
+%     \item Мигание светодиодом. \texttt{delay()}, \texttt{digitalWrite()}
+%     \item Маячок с нарастающей яркостью. \texttt{ШИМ}, \texttt{analogWrite()}, Идентификаторы
+%     \item Регулируемая лампочка. \texttt{analogRead()}, \texttt{int}, Переменные
+%     \item Автоматический ночник. \texttt{bool}, \texttt{if()}
+%     \item Пульс. \texttt{mod}
+%     \item Бегущий огонь. \texttt{for()}
+%     \item Вентилятор. Силовая нагрузка. Мотор
+%     \item Световой телеграф. подключение кнопок, \texttt{digitalRead()}
+%     \item Лампочка с кнопкой. Защита от дребезга
+%     \item Регулируемая лампочка. Функции
+%     \item Кнопочные ковбои. Массивы
+%     \item Секундомер. Семисегментный индикатор, \texttt{bitRead()}
+%     \item Счетчик нажатий. Сдвиговый регистр, \texttt{shiftOut()}
+%     \item Комнатный термометр. Датчик температуры. Математические выражения
+%     \item Метеостанция. \texttt{Serial.print()}, \texttt{Serial.println()}
+%     \item Пантограф. \texttt{Servo}
+%     \item USB лампочка. \texttt{Serial.read()}
+% \end{enumerate}
 
 \input{chapter.tex}
 
@@ -95,5 +95,7 @@
 \task{50_pulsar}{Пульсар}
 
 \task{60_equalizer}{Эквалайзер}
+
+\task{70_buttons}{Кнопки}
 
 \end{document}
