--- a/wokwi_book.tex
+++ b/wokwi_book.tex
@@ -48,11 +48,11 @@
 \graphicspath{ {./images/} }
 
 
-\title{Технология. Arduino \\ 8 класс 255 школа \\
+\title{Технология. Arduino \\ 255 школа \\
  Методическое пособие}
 
 \author{Ярмолинский Арсений Маркович}
-\date{10 сентября 2024 г. }
+\date{\today}
 
 \begin{document}
 \maketitle
