feat: added sonar chapter

--- a/wokwi_book.tex
+++ b/wokwi_book.tex
@@ -98,6 +98,8 @@
 
 \task{70_buttons}{Кнопки}
 
-\task{80_servo}{Автоматический флаг}
+\task{80_servo}{Механизированный флаг}
+
+\task{90_sonar}{Автоматические ворота}
 
 \end{document}
